# chia-tea

./: .gitignore  .pylintrc  404.html  FUNDING.yml  LICENSE  README.md  Taskfile.yml  config_default.yml  index.html  mkdocs.yml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py  sitemap.xml
.github/workflows/: python-lint-and-test.yml  python-lint-test-upload.yml  python-upload.yml
architecture_summary/: index.html
chia_tea/chia_watchdog/: ChiaWatchdog.py  FarmerService.py  HarvesterConnectedToFarmer.py  HarvesterInfo.py  HarvesterService.py  WalletService.py  computer_info_comparison.py  harvester_checks.py  regular_checks.py  run_watchdog.py  test_ChiaWatchdog.py  test_computer_info_comparison.py  test_regular_checks.py
chia_tea/chia_watchdog/api/: FarmerAPI.py  FarmerHarvesterAPI.py  HarvesterAPI.py  WalletAPI.py  shared_settings.py  test_update_from_farmer.py  update_all.py  update_from_farmer.py  update_from_harvester.py  update_from_wallet.py
chia_tea/chia_watchdog/logfile/: FarmerHarvesterLogfile.py  file_watching.py  line_checks.py  test_file_watching.py  test_logfile_line_checks.py
chia_tea/chia_watchdog/madmax/: MadMaxPlotInProgress.py  line_checks.py  test_line_checks.py
chia_tea/cli/: config.py  copy.py  discord.py  main.py  monitoring.py  start.py  test_config.py  test_copy.py  test_start.py
chia_tea/config/: __main__.py
chia_tea/copy/: Disk.py  Lockfile.py  main.py  test_Disk.py
chia_tea/copy_plots/: Disk.py  Lockfile.py  __main__.py
chia_tea/discord/: bot.py  common.py  formatting.py  test_formatting.py
chia_tea/discord/commands/: __init__.py  farmers.py  full_nodes.py  get_wallets.py  harvesters.py  machines.py  plotters.py  sql.py  test_farmers.py  test_full_nodes.py  test_harvesters.py  test_machines.py  test_plotters.py  test_sql.py  test_wallets.py  wallets.py
chia_tea/discord/notifications/: common.py  computer_info_notifications.py  formatting.py  run_notifiers.py  test_computer_info_notifications.py  test_run_notifiers.py  test_update_event_notifications.py  update_event_notifications.py
chia_tea/general/: AbstractLineAction.py  file_watching.py  test_file_watching.py
chia_tea/models/: ChiaWatchdog.py  FarmerHarvesterAPI.py  FarmerHarvesterLogfile.py  FullNodeAPI.py  HarvesterAPI.py  MadMaxPlotInProgress.py  WalletAPI.py  test_ChiaWatchdog.py
chia_tea/monitoring/: MonitoringClient.py  MonitoringDatabase.py  MonitoringServer.py  client.py  common.py  run_client.py  run_server.py  server.py
chia_tea/monitoring/data_collection/: chia.py  computer_info.py  hardware.py  test_chia.py
chia_tea/protobuf/: computer_info_comparison.py  test_computer_info_comparison.py  test_generated.py
chia_tea/protobuf/data_collection/: chia.py  computer_info.py  hardware.py
chia_tea/protobuf/to_sqlite/: custom.py  generic.py  sql_cmds.py  test_sql_cmds.py
chia_tea/utils/: cli.py  config.py  logger.py  settings.py  ssl.py  test_config.py  testing.py  timing.py
chia_tea/watchdog/: run_watchdog.py
chia_tea/watchdog/checks/: regular_checks.py  test_regular_checks.py
chia_tea/watchdog/collection/api/: test_update_from_farmer.py  update_all.py  update_from_farmer.py  update_from_full_node.py  update_from_harvester.py  update_from_wallet.py
chia_tea/watchdog/collection/logfile/: line_checks.py  test_logfile_line_checks.py
chia_tea/watchdog/collection/madmax_logfile/: line_checks.py  test_line_checks.py
chia_tea/watchdog/models/: FarmerAPI.py
docs/: architecture_summary.md  faq.md  index.md  quick_start.md
faq/: index.html
quick_start/: index.html
search/: search_index.json
